@@ -1,10 +1,8 @@
 package com.adorsys.keycloakstatuslist;
 
-import com.adorsys.keycloakstatuslist.model.StatusListCounterEntity;
 import com.adorsys.keycloakstatuslist.model.StatusListMappingEntity;
 import org.keycloak.connections.jpa.entityprovider.JpaEntityProvider;
 
-import java.util.Arrays;
 import java.util.List;
 
 public class StatusListJpaEntityProvider implements JpaEntityProvider {
@@ -12,21 +10,14 @@ public class StatusListJpaEntityProvider implements JpaEntityProvider {
     @Override
     public List<Class<?>> getEntities() {
         System.out.println("DEBUG: Registering entities: StatusListCounterEntity, StatusListMappingEntity");
-        return Arrays.asList(
-                StatusListCounterEntity.class,
+        return List.of(
                 StatusListMappingEntity.class
         );
     }
 
     @Override
     public String getChangelogLocation() {
-        System.out.println("DEBUG: No changelog location provided");
-        return null; // No Liquibase changelog needed
-    }
-
-    public String getSchema() {
-        System.out.println("DEBUG: Using schema: public");
-        return null; // H2 doesn't require a schema; null uses default
+        return "META-INF/statuslist-changelog.xml";
     }
 
     @Override
@@ -36,7 +27,6 @@ public class StatusListJpaEntityProvider implements JpaEntityProvider {
 
     @Override
     public String getFactoryId() {
-        // TODO Auto-generated method stub
-        throw new UnsupportedOperationException("Unimplemented method 'getFactoryId'");
+        return StatusListJpaEntityProviderFactory.ID;
     }
 }
